<resources>
    <string name="locale_code">en-US</string>
    <string name="app_name">Kcanotify</string>
    <string name="app_brand" translatable="false" traslatable="false">시제 깡들리티</string>
    <string name="action_settings">Settings</string>
    <string name="action_errorlog">Error Log</string>
    <string name="action_download">Download</string>
    <string name="action_check">CHECK</string>
    <string name="action_server">CHANGE SERVER</string>
    <string name="action_downloadall">DL ALL</string>
    <string name="action_inspector" translatable="false">Inspector</string>
    <string name="app_vpn_name">Kcanotify Sniffer</string>
    <string name="app_name_kancolle">KanColle Android (Official)</string>
    <string name="app_name_gotobrowser">GotoBrowser</string>
    <string name="special_message">Merry Christmas!!</string>
    <string name="notification_message">Notification and Information</string>
    <string name="app_notice_link" translatable="false">https://luckyjervis.com/kcanotify/notice</string>
    <string name="backpress_msg">Press back one more time to exit</string>
    <string name="notification_appinfo_title">Kcanotify Notification</string>
    <string name="developer_email" translatable="false">kcanotify@gmail.com</string>
    <string name="app_download_link_playstore_label" translatable="false">Google Play Store</string>
    <string name="app_download_link_googledrive_label" translatable="false">Google Drive</string>
    <string name="app_download_link_mega_label" translatable="false">MEGA</string>
    <string name="app_download_link_luckyjervis_label" translatable="false">luckyjervis.com</string>
    <string name="app_download_link_kcwiki_label" translatable="false">kcwiki mirror</string>
    <string name="app_download_link_googledrive" translatable="false">https://bit.ly/kcanotify_gdrive</string>
    <string name="app_download_link_mega" translatable="false">https://mega.nz/#F!0FtUTBoB!cSUJtRA76C4KBcrnc2-xdw</string>
    <string name="app_download_link_playstore" translatable="false">market://details?id=com.antest1.kcanotify</string>
    <string name="app_download_link_luckyjervis" translatable="false">https://luckyjervis.com/kcanotify/apk/latest.apk</string>
    <string name="app_download_link_kcwiki" translatable="false">https://mirrors.kcwiki.moe/kcanotify/</string>
    <string name="server_liza" translatable="false">https://luckyjervis.com/</string>
    <string name="server_liza_http" translatable="false">http://luckyjervis.com/</string>
    <string name="kcanotify_checkversion_link" translatable="false" formatted="false">kcanotify/v.php</string>
    <string name="api_start2_recent_version_link" translatable="false" formatted="false">kcanotify/kca_api_start2.php?v=recent</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="error_text">An error occurred. Please contact the developer.</string>
    <string name="questview_prev" translatable="false">PREV</string>
    <string name="questview_next" translatable="false">NEXT</string>
    <string name="heavy_damaged">A ship is heavily damaged!</string>
    <string name="heavy_damaged_damecon">A ship is heavily damaged! (Damecon available)</string>
    <string name="goback_left">Press LEFT button to escort the ship.</string>
    <string name="seek_type_0">Sum</string>
    <string name="seek_type_1">F33/1</string>
    <string name="seek_type_2">F33/2</string>
    <string name="seek_type_3">F33/3</string>
    <string name="seek_type_4">F33/4</string>
    <string name="seek_type_0_detail">Total Sum</string>
    <string name="seek_type_1_detail">Formula 33/Cn=1 (2&#45;5)</string>
    <string name="seek_type_2_detail">Formula 33/Cn=2 (5&#45;2,5&#45;4)</string>
    <string name="seek_type_3_detail">Formula 33/Cn=3 (6&#45;2,6&#45;3)</string>
    <string name="seek_type_4_detail">Formula 33/Cn=4 (3&#45;5,6&#45;1)</string>
    <string name="default_locale" translatable="false">default-LOCALE</string>
    <string name="language_system">Follow System Setting</string>
    <string name="language_ko" translatable="false">한국어</string>
    <string name="language_en" translatable="false">English</string>
    <string name="language_jp" translatable="false">日本語</string>
    <string name="language_scn" translatable="false">中文 (简体)</string>
    <string name="language_tcn" translatable="false">中文 (繁體)</string>
    <string name="language_es" translatable="false">Español</string>
    <string name="speed_superfast">Fastest</string>
    <string name="speed_fastplus">Fast+</string>
    <string name="speed_fast">Fast</string>
    <string name="speed_slow">Slow</string>
    <string name="speed_mixed_normal">Mixed(S)</string>
    <string name="speed_mixed_fast">Mixed(F)</string>
    <string name="speed_mixed_fastplus">Mixed(F+)</string>
    <string name="speed_none">\?\?</string>
    <string name="speed_postfix">&#160;Fleet</string>
    <string name="process_battle_failed_msg">An error occurred while processing battle data.</string>
    <string name="service_failed_msg">An error occurred while processing data. \nIt is recommended that you restart kcanotify.</string>
    <string name="node_info_noevent" formatted="false">%s (Battle Avoided)</string>
    <string name="node_info_obtain" formatted="false">%s (Resources Found)</string>
    <string name="node_info_loss" formatted="false">%s (Maelstrom)</string>
    <string name="node_info_normal" formatted="false">%s</string>
    <string name="node_info_normal_battle" formatted="false">%s (Enemy)</string>
    <string name="node_info_boss" formatted="false">%s (Boss)</string>
    <string name="node_info_boss_nightbattle" formatted="false">%s (Boss/Night)</string>
    <string name="node_info_boss_nightdaybattle" formatted="false">%s (Boss/Night->Day)</string>
    <string name="node_info_boss_ecbattle" formatted="false">%s (Boss/Enemy Combined)</string>
    <string name="node_info_airbattle" formatted="false">%s (Aerial Battle)</string>
    <string name="node_info_airsearch" formatted="false">%s (Recon)</string>
    <string name="node_info_ldairbattle" formatted="false">%s (Enemy Raid)</string>
    <string name="node_info_ldshooting" formatted="false">%s (Radar Shooting)</string>
    <string name="node_info_nightbattle" formatted="false">%s (Night Battle)</string>
    <string name="node_info_nightdaybattle" formatted="false">%s (Night->Day)</string>
    <string name="node_info_tpoint" formatted="false">%s (TP Load)</string>
    <string name="node_info_selectable" formatted="false">%s (Node Selection)</string>
    <string name="node_info_sendan" formatted="false">%s (Large Resource Point)</string>
    <string name="node_info_ecbattle" formatted="false">%s (Enemy Combined)</string>
    <string name="node_info_anchorage" formatted="false">%s (Anchorage Repair)</string>
    <string name="node_info_substrike" formatted="false">%s (Sub/Strike)</string>
    <string name="node_info_practice" formatted="false">PVP</string>
    <string name="ma_vpn_toggleon">Sniffer On</string>
    <string name="ma_vpn_toggleoff">Sniffer Off</string>
    <string name="ma_svc_toggleon">Service On</string>
    <string name="ma_svc_toggleoff">Service Off</string>
    <string name="ma_toast_kancolle_not_installed">Kancolle For Android is not installed.</string>
    <string name="ma_toast_gotobrowser_not_installed">GotoBrowser is not installed.</string>
    <string name="ma_toast_overay_diabled">Screen Overlay Permission is required for BattleView. Enable Screen Overlay at Settings > Screen Overlay Settings.</string>
    <string name="ma_hasupdate" formatted="false">An update is available. (%s)</string>
    <string name="ma_hasdataupdate" formatted="false">New game data is available. (%s)</string>
    <string name="ma_nextmaintenance" formatted="false">Next Maintenance:\n%s</string>
    <string name="ma_endmaintenance" formatted="false">Maintenance End Time:\n%s</string>
    <string name="description"><b>Help</b>\nTurn on VPN and SVC then run Kancolle\n\n※ VPN is required for detecting game data. \n\n<b>Main Features</b>\n - Expedition/Docking notifications \n - Heavy Damage Alert (prior to/during combat)\n - LoS/FP/Fatigue indicators\n - Node tracking during sorties\n - BattleView / QuestView\n - Improvement Arsenal Chart\n - Send statistics to poi-statistics (optional)</string>
    <string name="sa_checkupdate_latest" formatted="false">You have the latest version. (%s)</string>
    <string name="sa_checkupdate_hasupdate" formatted="false">An update is available. (%s)\nDo you wish to download it?</string>
    <string name="sa_checkupdate_dialogtitle">Check for updates.</string>
    <string name="sa_checkupdate_nodataerror">There was a problem checking for updates.</string>
    <string name="sa_checkupdate_servererror">Update server error.</string>
    <string name="sa_getupdate_finished">Game Data Download Completed</string>
    <string name="sa_getupdate_started">Downloading Game Data&#8230;</string>
    <string name="sa_getupdate_servererror" formatted="false">A Server Error Occurred: %s</string>
    <string name="setting_menu_kand_title_adv_network">SOCKS5 Proxy Settings</string>
    <string name="setting_menu_kand_warn_adv_network">Warning: Setting these incorrectly may make VPN Service unusable. Don\'t change these options unless you know what you are doing! You need to restart VPN Service to make these options effective.</string>
    <string name="setting_menu_kand_title_socks5_enable">Enable SOCKS5 Proxy</string>
    <string name="setting_menu_kand_title_socks5_allapps">Use proxy for all applications</string>
    <string name="setting_menu_kand_title_socks5_address">SOCKS5 Proxy Address</string>
    <string name="setting_menu_kand_title_socks5_port">SOCKS5 Proxy Port</string>
    <string name="setting_menu_kand_title_socks5_username">Username (optional)</string>
    <string name="setting_menu_kand_title_socks5_password">Password (optional)</string>
    <string name="settings_menu_kand_title_bypass_address">Bypass Addresses</string>
    <string name="setting_menu_kand_desc_bypass_address">Use CIDR to describe bypass addresses, separate each CIDR by a comma.</string>
    <string name="filter_equip_title">Filter by Equipment Type</string>
    <string name="filter_equip_all">ALL</string>
    <string name="filter_equip_none">CLEAR</string>
    <string name="filter_equip_rev">REVERSE</string>
    <string name="ship_exclude_label">Ship Status Filter</string>
    <string name="ship_exclude_type1">Exclude ships in expedition</string>
    <string name="ship_exclude_type2">Exclude ships in repair</string>
    <string name="ship_stat_equip_stype_label">Special Equipment Filter</string>
    <string name="ship_stat_equip_stype1">Daihatsu</string>
    <string name="ship_stat_equip_stype2">Amphibious Tank</string>
    <string name="ship_stat_equip_stype3">Bulge (M)</string>
    <string name="ship_stat_equip_stype4">Command Facility</string>
    <string name="ship_stat_equip_stype5">Searchlight (L)</string>
    <string name="expdtable_btn_w0">ALL</string>
    <string name="expdtable_btn_w1">World 1</string>
    <string name="expdtable_btn_w2">World 2</string>
    <string name="expdtable_btn_w3">World 3</string>
    <string name="expdtable_btn_w4">World 4</string>
    <string name="expdtable_btn_w5">World 5</string>
    <string name="expdtable_btn_w6">World 6</string>
    <string name="expdtable_btn_w7">World 7</string>
    <string name="expdtable_btn_s2">Great</string>
    <string name="ship_nat_label">Nationality Filter</string>
    <string name="nat1">Japan</string>
    <string name="nat2">United States</string>
    <string name="nat3">Italy</string>
    <string name="nat4">Great Britain</string>
    <string name="nat5">Germany</string>
    <string name="nat6">France</string>
    <string name="nat7">USSR</string>
    <string name="nat8">Sweden</string>
    <string name="nat9">Australia</string>
    <string name="nat10">Netherlands</string>
</resources>