<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="@color/colorToolbarText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:padding="5dp">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            app:chipSpacingVertical="-8dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/btn_w0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="5dp"
                android:text="@string/expdtable_btn_w0"
                android:textAlignment="center"
                android:textColor="@color/colorBtnText"
                android:textSize="15dp"
                app:chipBackgroundColor="@color/colorBtn" />

            <com.google.android.material.chip.Chip
                android:id="@+id/btn_w1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="5dp"
                android:text="@string/expdtable_btn_w1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15dp"
                app:chipBackgroundColor="@color/colorExpeditionTable1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/btn_w2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="5dp"
                android:text="@string/expdtable_btn_w2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15dp"
                app:chipBackgroundColor="@color/colorExpeditionTable2" />

            <com.google.android.material.chip.Chip
                android:id="@+id/btn_w3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="5dp"
                android:text="@string/expdtable_btn_w3"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15dp"
                app:chipBackgroundColor="@color/colorExpeditionTable3" />

            <com.google.android.material.chip.Chip
                android:id="@+id/btn_w7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="5dp"
                android:text="@string/expdtable_btn_w7"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15dp"
                app:chipBackgroundColor="@color/colorExpeditionTable7" />

            <com.google.android.material.chip.Chip
                android:id="@+id/btn_w4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="5dp"
                android:text="@string/expdtable_btn_w4"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15dp"
                app:chipBackgroundColor="@color/colorExpeditionTable4" />


            <com.google.android.material.chip.Chip
                android:id="@+id/btn_w5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="5dp"
                android:text="@string/expdtable_btn_w5"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15dp"
                app:chipBackgroundColor="@color/colorExpeditionTable5" />

            <com.google.android.material.chip.Chip
                android:id="@+id/btn_w6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="5dp"
                android:text="@string/expdtable_btn_w6"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:visibility="visible"
                app:chipBackgroundColor="@color/colorExpeditionTable6" />

            <com.google.android.material.chip.Chip
                android:id="@+id/btn_success_type"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@color/colorBtn"
                android:padding="5dp"
                android:text="@string/expdtable_btn_s2"
                android:textAlignment="center"
                android:textColor="@color/colorBtnText"
                android:textSize="15dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/btn_daihatsu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@color/colorBtn"
                android:padding="5dp"
                android:text="x0"
                android:textAlignment="center"
                android:textColor="@color/colorBtnText"
                android:textSize="15dp"
                app:chipIcon="@mipmap/item_20" />
        </com.google.android.material.chip.ChipGroup>

        <ListView
            android:id="@+id/expeditiontable_listiview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:listSelector="@android:color/transparent" />


    </LinearLayout>


</LinearLayout>